src/objects/TimeOff_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Batch_Class_Limit__c</fullName>
        <label>Batch Class Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Order_By__c</fullName>
        <description>Batch Order By condition</description>
        <inlineHelpText>Batch Order By condition</inlineHelpText>
        <label>Batch Order By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Subquery__c</fullName>
        <label>Batch_Subquery</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>TimeOff Setting</label>
    <pluralLabel>TimeOff Settings</pluralLabel>
</CustomObject>